refactor(authentication-service): fix sonar issues
BREAKING CHANGE:
changed client_id and client_secret to clientId and clientSecret in login-request dto and client-auth-req dto

GH-251
