# services/authentication-service/openapi.json
@@ -7,44 +7,6 @@
     "contact": {}
   },
   "paths": {
-    "/auth/apple-oauth-redirect": {
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "appleCallback",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Apple Redirect Token Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "code",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.appleCallback"
-      }
-    },
     "/auth/change-password": {
       "patch": {
         "x-controller-name": "LoginController",
@@ -81,75 +43,6 @@
           }
         },
         "operationId": "LoginController.resetPassword"
-      }
-    },
-    "/auth/facebook": {
-      "post": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "postLoginViaFacebook",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "POST Call for Facebook based login",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/ClientAuthRequest"
-              }
-            }
-          }
-        },
-        "operationId": "LoginController.postLoginViaFacebook"
-      }
-    },
-    "/auth/facebook-auth-redirect": {
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "facebookCallback",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Facebook Redirect Token Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "code",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.facebookCallback"
       }
     },
     "/auth/forget-password": {
@@ -198,288 +91,6 @@
           }
         },
         "operationId": "ForgetPasswordController.forgetPassword"
-      }
-    },
-    "/auth/google": {
-      "post": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "postLoginViaGoogle",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "POST Call for Google based login",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/ClientAuthRequest"
-              }
-            }
-          }
-        },
-        "operationId": "LoginController.postLoginViaGoogle"
-      },
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "loginViaGoogle",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Google Token Response (Deprecated: Possible security issue if secret is passed via query params, please use the post endpoint)",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true,
-        "parameters": [
-          {
-            "name": "client_id",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "client_secret",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.loginViaGoogle"
-      }
-    },
-    "/auth/google-auth-redirect": {
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "googleCallback",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Google Redirect Token Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "code",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.googleCallback"
-      }
-    },
-    "/auth/instagram": {
-      "post": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "postLoginViaInstagram",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "POST Call for Instagram based login",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/ClientAuthRequest"
-              }
-            }
-          }
-        },
-        "operationId": "LoginController.postLoginViaInstagram"
-      }
-    },
-    "/auth/instagram-auth-redirect": {
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "instagramCallback",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Instagram Redirect Token Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "code",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.instagramCallback"
-      }
-    },
-    "/auth/keycloak": {
-      "post": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "postLoginViaKeycloak",
-        "tags": [
-          "LoginController"
-        ],
-        "description": "POST Call for keycloak based login",
-        "responses": {
-          "200": {
-            "description": "Keycloak Token Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/ClientAuthRequest"
-              }
-            }
-          }
-        },
-        "operationId": "LoginController.postLoginViaKeycloak"
-      },
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "loginViaKeycloak",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Keycloak Token Response (Deprecated: Possible security issue if secret is passed via query params, please use the post endpoint)",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true,
-        "parameters": [
-          {
-            "name": "client_id",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "client_secret",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.loginViaKeycloak"
-      }
-    },
-    "/auth/keycloak-auth-redirect": {
-      "get": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "keycloakCallback",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "Keycloak Redirect Token Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "code",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "operationId": "LoginController.keycloakCallback"
       }
     },
     "/auth/login": {
@@ -605,31 +216,6 @@
           }
         },
         "operationId": "LoginController.me"
-      }
-    },
-    "/auth/oauth-apple": {
-      "post": {
-        "x-controller-name": "LoginController",
-        "x-operation-name": "postLoginViaApple",
-        "tags": [
-          "LoginController"
-        ],
-        "responses": {
-          "200": {
-            "description": "POST Call for Apple based login",
-            "content": {}
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/ClientAuthRequest"
-              }
-            }
-          }
-        },
-        "operationId": "LoginController.postLoginViaApple"
       }
     },
     "/auth/reset-password": {
@@ -1454,11 +1040,11 @@
         "type": "object",
         "description": "This is the signature for login request.",
         "properties": {
-          "client_id": {
+          "clientId": {
             "type": "string",
             "description": "This property is supposed to be a string and is a required field"
           },
-          "client_secret": {
+          "clientSecret": {
             "type": "string",
             "description": "This property is supposed to be a string and is a required field"
           },
@@ -1472,8 +1058,8 @@
           }
         },
         "required": [
-          "client_id",
-          "client_secret",
+          "clientId",
+          "clientSecret",
           "username",
           "password"
         ],
@@ -1535,26 +1121,6 @@
         },
         "required": [
           "refreshToken"
-        ],
-        "additionalProperties": false
-      },
-      "ClientAuthRequest": {
-        "title": "ClientAuthRequest",
-        "type": "object",
-        "description": "This is signature for client authentication request.",
-        "properties": {
-          "client_id": {
-            "type": "string",
-            "description": "This property is supposed to be a string and is a required field"
-          },
-          "client_secret": {
-            "type": "string",
-            "description": "This property is supposed to be a string and is a required field"
-          }
-        },
-        "required": [
-          "client_id",
-          "client_secret"
         ],
         "additionalProperties": false
       },
